--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="/src/styles.css">
-    <link rel="stylesheet" href="./styles.css">
+    <!-- <link rel="stylesheet" href="/src/styles.css"> -->
+    <link rel="stylesheet" href="./tailwind.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
